tests/baselines/reference/ambientExternalModuleInsideNonAmbient.errors.txt
tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbient.ts(2,27): error TS2435: Ambient modules cannot be nested in other modules or namespaces.


==== tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbient.ts (1 errors) ====
    module M {
        export declare module "M" { }
                              ~~~
!!! error TS2435: Ambient modules cannot be nested in other modules or namespaces.
    }